[gd_scene load_steps=5 format=2]

[ext_resource path="res://pot.png" type="Texture" id=1]
[ext_resource path="res://SkillBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pot.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 52 )

[node name="Pot" type="Node2D"]
script = ExtResource( 3 )

[node name="Pot" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="SkillBar" parent="." instance=ExtResource( 2 )]

[node name="SkillBar2" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -104 )

[node name="SkillBar3" parent="." instance=ExtResource( 2 )]
position = Vector2( 72, -104 )

[node name="Area2D" type="Area2D" parent="." groups=["Task"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 12 )
shape = SubResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -76.0
margin_top = 48.0
margin_right = 76.0
margin_bottom = 62.0
max_value = 1.0
